fix: food 코드리뷰 수정 - LIKE 와일드카드 이스케이프, isBlank 적용, 에러메시지 인코딩 복원
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>